--- a/templates/base.jade
+++ b/templates/base.jade
@@ -57,6 +57,22 @@ html(ng-app="abelujo")
               i.glyphicon.glyphicon-stats
 
           li.dropdown.push-right
+            a.dropdown-toggle(href="#", data-toggle="dropdown", role="button", title='{% trans "Access everything on the database" %}') {% trans "Pages" %}
+              span.caret
+            {% get_current_language as LANGUAGE_CODE %}
+            ul.dropdown-menu
+                li(href="#")
+                    a(href='/{{ LANGUAGE_CODE }}/catalogue-selection') {% trans "Sélection du libraire" %}
+                if FEATURE_EXCLUDE_FOR_WEBSITE
+                  li.divider(role="separator")
+                  li(href="#")
+                    a(href='/{{ LANGUAGE_CODE }}/catalogue-excluded') {% trans "Livres exclus du site vitrine" %}
+                li.divider(role="separator")
+                li(href="#")
+                    a(href='/{{ LANGUAGE_CODE }}/cards-without-eans') {% trans "Cards without EANs" %}
+
+          if user.is_staff
+           li.dropdown.push-right
             a.dropdown-toggle(href="#", data-toggle="dropdown", role="button", title='{% trans "Access everything on the database" %}') {% trans "Database" %}
               span.caret
             {% get_current_language as LANGUAGE_CODE %}
@@ -82,15 +98,6 @@ html(ng-app="abelujo")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/database') {% trans "All" %}
                 li.divider(role="separator")
-                li(href="#")
-                    a(href='/{{ LANGUAGE_CODE }}/cards-without-eans') {% trans "Cards without EANs" %}
-                li.divider(role="separator")
-                li(href="#")
-                    a(href='/{{ LANGUAGE_CODE }}/catalogue-selection') {% trans "Sélection du libraire" %}
-                if FEATURE_EXCLUDE_FOR_WEBSITE
-                  li.divider(role="separator")
-                  li(href="#")
-                    a(href='/{{ LANGUAGE_CODE }}/catalogue-excluded') {% trans "Livres exclus du site vitrine" %}
 
         form.navbar-form.navbar-left
           .form-group
@@ -131,32 +138,39 @@ html(ng-app="abelujo")
           li(ng-class="{active: url == 'search' }")
             a(href='{% url "card_search" %}') {% trans "Search" %}
 
-          li(ng-class="{active: url == 'sell' }")
-            a(href='{% url "card_sell" %}') {% trans "Sell" %}
+          if user.is_staff
+            li(ng-class="{active: url == 'sell' }")
+              a(href='{% url "card_sell" %}') {% trans "Sell" %}
 
           //li(ng-class="{active: url == 'restocking' }")
             a(href='{% url "card_restocking" %}' title='{% trans "Cards to move from the stock place to the shelves" %}') {% trans "Restocking" %}
               span.badge.ng-cloak(title='{% trans "Number of cards to move from the stock to their shelves." %}') {{ "restocking_total" | ng }}
 
-          li(ng-class="{active: url == 'inventories' }")
-            a(href='{% url "inventories" %}') {% trans "Inventories" %}
+          if user.is_staff
+            li(ng-class="{active: url == 'inventories' }")
+              a(href='{% url "inventories" %}') {% trans "Inventories" %}
 
-          li(ng-class="{active: url == 'deposits' }")
-            a(href='{% url "deposits" %}') {% trans "Deposits" %}
+          if user.is_staff
+            li(ng-class="{active: url == 'deposits' }")
+              a(href='{% url "deposits" %}') {% trans "Deposits" %}
 
-          li(ng-class="{active: url == 'baskets' }")
-            a(href='{% url "baskets" %}') {% trans "Lists" %}
+          if user.is_staff
+            li(ng-class="{active: url == 'baskets' }")
+              a(href='{% url "baskets" %}') {% trans "Lists" %}
 
-          li(ng-class="{active: url == 'boxes' }")
-            a(href='{% url "boxes" %}') {% trans "Boxes" %}
+          if user.is_staff
+            li(ng-class="{active: url == 'boxes' }")
+              a(href='{% url "boxes" %}') {% trans "Boxes" %}
 
-          li(ng-class="{active: url == 'reception' }")
-            a(href='{% url "reception" %}') {% trans "Reception" %}
+          if user.is_staff
+            li(ng-class="{active: url == 'reception' }")
+              a(href='{% url "reception" %}') {% trans "Reception" %}
 
-          li(ng-class="{active: url == 'commands' }")
-            a(href='{% url "basket_auto_command" %}') {% trans "Commands" %}
-              span.badge.ng-cloak(title='{% trans "Number of cards needing a command." %}') {{ "auto_command_total" | ng }}
-              span.badge.ng-cloak(title='{% trans "Number of ongoing commands." %}') {{ "ongoing_commands_nb" | ng }}
+          if user.is_staff
+            li(ng-class="{active: url == 'commands' }")
+              a(href='{% url "basket_auto_command" %}') {% trans "Commands" %}
+                span.badge.ng-cloak(title='{% trans "Number of cards needing a command." %}') {{ "auto_command_total" | ng }}
+                span.badge.ng-cloak(title='{% trans "Number of ongoing commands." %}') {{ "ongoing_commands_nb" | ng }}
 
           li(ng-show="FEATURE_SHOW_RESERVATION_BUTTON", ng-class="{active: url == 'reservations' }")
             a(href='{% url "reservations" %}') {% trans "Client Commands" %}
@@ -165,8 +179,9 @@ html(ng-app="abelujo")
           li(ng-class="{active: url == 'history' }")
             a(href='{% url "history_sells" %}') {% trans "History" %}
 
-          li(ng-class="{active: highlight_supplier_menu() }")
-            a(href='{% url "suppliers_sells" %}') {% trans "Suppliers" %}
+          if user.is_staff
+            li(ng-class="{active: highlight_supplier_menu() }")
+              a(href='{% url "suppliers_sells" %}') {% trans "Suppliers" %}
 
           //li(ng-class="{active: url == 'alerts' }")
             a(href='{% url "search_alerts" %}') {% trans "Alerts" %}
