--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -113,6 +113,7 @@ div.ng-cloak(ng-controller="sellController")
                 a.btn.btn-default(role="button"
                                 href="http://abelujo.cc/docs/sell/"
                                 target="_blank",
+                                ng-click="focus_input()",
                                 title='{% trans "Read the documentation" %}')
                   i.glyphicon.glyphicon-question-sign
 
